# TrayList

./: .gitignore  CMakeLists.txt  README.md  build_on_windows.ps1  setup_and_build.ps1
src/: app.cpp  app.h  app.manifest  click.cpp  click.h  common.cpp  common.h  hotkey.cpp  hotkey.h  main.cpp  popup.cpp  popup.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  tray_enum.cpp  tray_enum.h
